cabal-version:      3.0
name:               tomlin
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Isaac Elliott
maintainer:         isaace71295@gmail.com
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Toml
    build-depends:
        base ^>=4.20.2.0,
        bytestring,
        containers,
        mtl,
        text >=2.0,
        sage
    hs-source-dirs:   src
    default-language: Haskell2010
