cabal-version:      3.0
name:               tomlin
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Isaac Elliott
maintainer:         isaace71295@gmail.com
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Toml
    build-depends:
        base ^>=4.20.2.0,
        bytestring,
        containers,
        mtl,
        text >=2.0,
        sage
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite tomlin-tests
    import:           warnings
    type:             exitcode-stdio-1.0
    other-modules:    Test.TomlSpec
    build-tool-depends:
        hspec-discover:hspec-discover
    build-depends:
        base ^>=4.20.2.0,
        hspec,
        tomlin
    hs-source-dirs:   test
    main-is:          Main.hs
    default-language: Haskell2010
